Fix issue with multiple sleect status in clients page filter and add featur for clientsPage to collapse table data of payslist

--- a/src/components/ui/Input/input.module.scss
+++ b/src/components/ui/Input/input.module.scss
@@ -261,7 +261,7 @@
   color: v.$filter-input-color !important;
   width: 165px;
   padding: 8px 30px 8px 12px !important;
-  line-height: 15px !important;
+  line-height: 14px !important;
   border-radius: 6px !important;
   border: v.$primary-border-width v.$primary-border-type
     v.$filter-input-border-color !important;
@@ -272,13 +272,17 @@
 }
 
 :global(.react-select__menu) {
-  border-radius: 8px;
+  border-radius: 14px;
   padding: 0 !important;
   z-index: 9999;
   font-size: 3rem !important;
   & * {
     color: v.$filter-input-placeholder-color !important ;
   }
+}
+
+:global(.react-select__menu-list) {
+  padding: 0 !important;
 }
 
 :global(.react-select__dropdown-indicator) {
@@ -289,7 +293,7 @@
   margin: 0 !important;
   overflow: scroll;
   padding: 0 !important;
-  line-height: 120% !important;
+  line-height: 100% !important;
   font-size: 12px;
   color: v.$filter-input-placeholder-color !important;
 }
@@ -298,8 +302,8 @@
   padding: 0 !important;
 
   & svg {
-    width: 18px !important;
-    height: 18px !important;
+    width: 16px !important;
+    height: 16px !important;
   }
 }
 
@@ -313,6 +317,16 @@
   &:hover {
     background-color: #0078d7;
     color: #fff !important;
+  }
+
+  &:first-child:hover {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+
+  &:last-child:hover {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
   }
 }
 
