--- a/src/components/ui/List/list.module.scss
+++ b/src/components/ui/List/list.module.scss
@@ -1,5 +1,50 @@
+@use "@styles/mixins.scss" as m;
+@use "@styles/variables.scss" as v;
+
 .list {
   margin: 0;
   padding: 0;
   list-style: none;
+  transition: all v.$transition-time v.$transition-type;
+
+  &.expanded {
+    height: max-content;
+  }
+
+  &.shrinked {
+    height: 20px;
+    overflow: hidden;
+  }
+}
+
+.dots {
+  color: v.$secondary-color;
+  line-height: 100%;
+  opacity: 0.8;
+}
+
+.toggle-button {
+  @include m.flex-center;
+  gap: 4px;
+  margin-top: 4px;
+  background-color: transparent;
+  border: none;
+  font-size: 3rem;
+  font-weight: 600;
+  color: v.$fourth-color;
+  opacity: 0.8;
+  transform: scale(1);
+  transform-origin: center;
+  will-change: transform;
+  backface-visibility: hidden;
+  perspective: 1000px;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 1;
+  }
+  & svg {
+    width: 15px;
+    height: 15px;
+  }
 }
